package org.example;

interface IGUI {
    void window();
    void placement();
    void setVisible(boolean visible);

}
